--- a/Project.toml
+++ b/Project.toml
@@ -5,12 +5,14 @@ version = "0.1.0"
 
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+GenieFramework = "a59fdf5c-6bf0-4f5d-949c-a137c9e2f353"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
 
 [compat]
 Dates = "1.11.0"
+GenieFramework = "3.0.1"
 Random = "1.11.0"
 Serialization = "1.11.0"
 Sockets = "1.11.0"
